# a-day-in-nju-suzhou

./: .gitignore  CMakeLists.txt  COLLABORATION.md  README.md  RESOURCE_GUIDE.md  UI_GUIDE.md  codexDesign.md  project_structure.txt  vedio.md
assets/: README.md  config.json  item_effects.json
assets/boss/Teacher/: design.md
assets/boss/WashMachine/: design.md
assets/enemy/level_1/: README_CLOCKBOOM.md
assets/levels/: BOSS_BACKGROUND_GUIDE.md  BOSS_DIALOG_README.md  README.md  boss_dialog_example.json  level1.json  level2.json  level3.json
docs/: BOSS_SYSTEM_README.md
src/: constants.h  main.cpp
src/core/: GameWindow.cpp  audiomanager.cpp  audiomanager.h  configmanager.cpp  configmanager.h  configvalidator.cpp  configvalidator.h  gamecontroller.cpp  gamecontroller.h  gamemanager.cpp  gamemanager.h  gamewindow.h  gamewindow.ui  logging.cpp  logging.h  resourcefactory.h
src/entities/: boss.cpp  boss.h  chalkbeam.cpp  chalkbeam.h  clockboom.cpp  clockboom.h  clockenemy.cpp  clockenemy.h  digitalsystemenemy.cpp  digitalsystemenemy.h  enemy.cpp  enemy.h  entity.cpp  entity.h  exampaper.cpp  exampaper.h  invigilator.cpp  invigilator.h  mletrap.cpp  mletrap.h  nightmareboss.cpp  nightmareboss.h  optimizationenemy.cpp  optimizationenemy.h  orbitingsock.cpp  orbitingsock.h  pantsenemy.cpp  pantsenemy.h  pillowenemy.cpp  pillowenemy.h  player.cpp  player.h  probabilityenemy.cpp  probabilityenemy.h  projectile.cpp  projectile.h  scalingenemy.cpp  scalingenemy.h  sockenemy.cpp  sockenemy.h  (+18 more)
src/entities/level_1/: clockboom.cpp  clockboom.h  clockenemy.cpp  clockenemy.h  nightmareboss.cpp  nightmareboss.h  pillowenemy.cpp  pillowenemy.h
src/entities/level_2/: orbitingsock.cpp  orbitingsock.h  pantsenemy.cpp  pantsenemy.h  sockenemy.cpp  sockenemy.h  sockshooter.cpp  sockshooter.h  toxicgas.cpp  toxicgas.h  walker.cpp  walker.h  washmachineboss.cpp  washmachineboss.h
src/entities/level_3/: chalkbeam.cpp  digitalsystemenemy.cpp  exampaper.cpp  invigilator.cpp  invigilator.h  mletrap.cpp  optimizationenemy.cpp  optimizationenemy.h  probabilityenemy.cpp  probabilityenemy.h  scalingenemy.cpp  scalingenemy.h  teacherboss.cpp  teacherboss.h  xukeenemy.cpp  xukeenemy.h  yanglinenemy.cpp  zhuhaoenemy.cpp  zhuhaoenemy.h
src/items/: chest.cpp  chest.h  design.md  droppeditem.cpp  droppeditem.h  droppeditemfactory.cpp  droppeditemfactory.h  item.cpp  item.h  itemeffectconfig.cpp  itemeffectconfig.h  statuseffect.cpp  statuseffect.h
src/ui/: characterselector.cpp  characterselector.h  codex.cpp  codex.h  dialogsystem.cpp  dialogsystem.h  explosion.cpp  explosion.h  gameview.cpp  gameview.h  hud.cpp  hud.h  mainmenu.cpp  mainmenu.h  pausemenu.cpp  pausemenu.h
src/world/: bossfight.cpp  bossfight.h  door.cpp  door.h  level.cpp  level.h  levelconfig.cpp  levelconfig.h  map.cpp  map.h  randomgenerator.cpp  randomgenerator.h  rewardsystem.cpp  rewardsystem.h  room.cpp  room.h  roommanager.cpp  roommanager.h  wall.h
src/world/factory/: bossfactory.cpp  bossfactory.h  enemyfactory.cpp  enemyfactory.h
